kustomize/overlays/staging/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tech-challenge-staging
spec:
  type: ClusterIP
  selector:
    app: tech-challenge-staging
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
